fix: overflow scrren x

--- a/css/app.css
+++ b/css/app.css
@@ -784,6 +784,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .overflow-x-scroll {
     overflow-x: scroll;
   }
